Fixed styling issue from the form alignment.
Fixed styling bug from form alignment, where smaller screens would make it move away from the vertical axis, and corrected a test left behind from a previous test in index.css.

Removed unwanted style property used for quick tests from index.html.

--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ html {
 }
 
 .content-container {
-  width: 10%;
+  width: 100%;
   height: calc(100vh - 80px);
   min-height: 590px;
   background-position-y: top;
@@ -103,7 +103,7 @@ div > span {
   justify-content: space-between;
   background-color: rgb(0, 0, 0, 0.8);
   min-width: 375px;
-  width: 100vw;
+  width: 100%;
   margin: 0%;
   height: 15.6vh;
   min-height: 80px;
@@ -112,11 +112,11 @@ div > span {
 
 .body-container {
   max-height: 100vh;
-  width: 100vw;
+  width: 100%;
+  min-width: 375px;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  overflow-x: auto;
 }
 
 .media-icons {
@@ -171,7 +171,7 @@ li {
 .flex-sections {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
 }
 
 .projects-grid {
@@ -250,7 +250,7 @@ li {
 section.content {
   min-width: 375px;
   height: auto;
-  width: 100vw;
+  width: 100%;
   margin: 0%;
 }
 
@@ -592,6 +592,7 @@ li > span.language {
   align-self: center;
   align-items: center;
   width: 100%;
+  min-width: 375px;
   height: auto;
   margin-bottom: 112px;
 }
